<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Billetes de Loteria</string>
    <string name="action_settings">Settings</string>
    <string name="loteria_name">Nombre de la Loteria</string>
    <string name="add_ticket">Añadir Boleto</string>
    <string name="lot_number">Número</string>
    <string name="serie">Serie</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="loteria">Loteria de Bogota</string>
    <string name="t_ticket_list">Listado de Billetes</string>

</resources>
