<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.example.root.billetesloteria.AddTicketFragment">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_action_new_event"/>
    <TextView android:id="@+id/tVTicket"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_ticket"
        android:gravity="center"
        android:paddingBottom="15sp"
        android:paddingTop="15sp"
        android:textSize="35sp"/>

    <EditText android:id="@+id/tLotery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="24sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:hint="@string/loteria_name"
        android:textColorHint="#FFFFFF" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText android:id="@+id/tNumber"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="3sp"
            android:numeric="decimal"
            android:hint="@string/lot_number"
            android:textColorHint="#FFFFFF" />
        <EditText android:id="@+id/tSeries"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginLeft="3sp"
            android:layout_marginRight="3sp"
            android:hint="@string/serie"
            android:numeric="decimal"
            android:textColorHint="#FFFFFF" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/btn_cancel"
            android:paddingLeft="10sp"
            android:paddingRight="5sp"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_save"
            android:text="@string/btn_save"
            android:paddingLeft="5sp"
            android:paddingRight="10sp"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
     </LinearLayout>


</LinearLayout>
 </ScrollView>